--- a/examples/ftp_server/CMakeLists.txt
+++ b/examples/ftp_server/CMakeLists.txt
@@ -5,7 +5,7 @@ project(ftp_server)
 find_package(Threads REQUIRED)
 
 if(NOT MSVC)
-    add_definitions("-std=c++11 -Wall -Wextra -Werror")
+    add_definitions("-std=c++11 -Wall -Wextra")
 else()
     add_definitions("-std=c++11 -WX -W2")
 endif()
