--- a/examples/tune/CMakeLists.txt
+++ b/examples/tune/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.5.1)
 project(tune)
 
 if(NOT MSVC)
-    add_definitions("-std=c++11 -Wall -Wextra -Werror")
+    add_definitions("-std=c++11 -Wall -Wextra")
 else()
     add_definitions("-std=c++11 -WX -W2")
 endif()
