--- a/src/plugins/mission/CMakeLists.txt
+++ b/src/plugins/mission/CMakeLists.txt
@@ -38,5 +38,6 @@ install(FILES
 
 list(APPEND UNIT_TEST_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/mission_import_qgc_test.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/mission_equality_operator_test.cpp
 )
 set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
