Rename MAVLinkFTP to Ftp (mavlink_ftp to ftp)
This makes it consistent with shell and hides the internals.

--- a/examples/ftp_client/CMakeLists.txt
+++ b/examples/ftp_client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.12)
 
-project(mavlink_ftp_server)
+project(ftp_client)
 
 find_package(Threads REQUIRED)
 
@@ -12,12 +12,12 @@ endif()
 
 find_package(MAVSDK REQUIRED)
 
-add_executable(mavlink_ftp_server
-    mavlink_ftp_server.cpp
+add_executable(ftp_client
+    ftp_client.cpp
 )
 
-target_link_libraries(mavlink_ftp_server
-    MAVSDK::mavsdk_mavlink_ftp
+target_link_libraries(ftp_client
+    MAVSDK::mavsdk_ftp
     MAVSDK::mavsdk
     ${CMAKE_THREAD_LIBS_INIT}
 )
