--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -43,7 +43,7 @@ add_executable(integration_tests_runner
     offboard_attitude.cpp
     #logging.cpp # Not fully implemented
     log_files.cpp
-    mavlink_ftp.cpp
+    ftp.cpp
     mission_cancellation.cpp
     mission_change_speed.cpp
     mission.cpp
@@ -88,7 +88,7 @@ target_link_libraries(integration_tests_runner
     mavsdk_calibration
     mavsdk_geofence
     mavsdk_param
-    mavsdk_mavlink_ftp
+    mavsdk_ftp
     ${additional_libs}
     gtest
     gtest_main
