--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,5 +15,5 @@ add_subdirectory(multiple_drones)
 add_subdirectory(offboard_velocity)
 add_subdirectory(takeoff_land)
 add_subdirectory(transition_vtol_fixed_wing)
-add_subdirectory(mavlink_ftp_client)
-add_subdirectory(mavlink_ftp_server)
+add_subdirectory(ftp_client)
+add_subdirectory(ftp_server)
