--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,10 @@ jobs:
         run: cmake --build build/release -j 2
       - name: install
         run: sudo cmake --build build/release --target install
+      - name: configure examples
+        run: (cd examples && cmake -DCMAKE_BUILD_TYPE=Release -j 2 -Bbuild -H.)
+      - name: build examples
+        run: (cd examples && cmake --build build -j 2)
       - name: test
         run: ./build/release/src/unit_tests_runner
       - name: test (mavsdk_server)
