workflows: fix artifact name of Windows exe

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -326,6 +326,6 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: 'build/release/install/bin/mavsdk_server_bin.exe'
-          asset_name: 'mavsdk_server_macos'
+          asset_name: 'mavsdk_server_win32.exe'
           tag: ${{ github.ref }}
           overwrite: true
