--- a/src/plugins/telemetry/CMakeLists.txt
+++ b/src/plugins/telemetry/CMakeLists.txt
@@ -27,3 +27,8 @@ install(FILES
     include/plugins/telemetry/telemetry.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/telemetry
 )
+
+list(APPEND UNIT_TEST_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/math_conversions_test.cpp
+)
+set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
