--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -3,23 +3,23 @@ include_directories(
     SYSTEM  ${PROJECT_SOURCE_DIR}/third_party/mavlink/include
 )
 
-add_subdirectory(action)
-add_subdirectory(calibration)
-add_subdirectory(camera)
-add_subdirectory(follow_me)
-add_subdirectory(geofence)
-add_subdirectory(gimbal)
-add_subdirectory(info)
-add_subdirectory(log_files)
-add_subdirectory(ftp)
-add_subdirectory(mission)
-add_subdirectory(mission_raw)
-add_subdirectory(mocap)
-add_subdirectory(offboard)
-add_subdirectory(param)
-add_subdirectory(shell)
-add_subdirectory(telemetry)
-add_subdirectory(tune)
+#add_subdirectory(action)
+#add_subdirectory(calibration)
+#add_subdirectory(camera)
+#add_subdirectory(follow_me)
+#add_subdirectory(geofence)
+#add_subdirectory(gimbal)
+#add_subdirectory(info)
+#add_subdirectory(log_files)
+#add_subdirectory(ftp)
+#add_subdirectory(mission)
+#add_subdirectory(mission_raw)
+#add_subdirectory(mocap)
+#add_subdirectory(offboard)
+#add_subdirectory(param)
+#add_subdirectory(shell)
+#add_subdirectory(telemetry)
+#add_subdirectory(tune)
 
 if (ENABLE_MAVLINK_PASSTHROUGH)
     message(STATUS "Include MAVLink passthrough plugin")
