Add openssl to manylinux

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -199,29 +199,49 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
-  dockcross-manylinux:
+  dockcross-manylinux2010-x64:
     name: ${{ matrix.arch_name }}
     runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        arch_name: [manylinux2010-x64, manylinux2014-aarch64]
     steps:
       - uses: actions/checkout@v1
         with:
           submodules: recursive
       - name: setup dockcross
-        run: docker run --rm dockcross/${{ matrix.arch_name }} > ./dockcross-${{ matrix.arch_name }}; chmod +x ./dockcross-${{ matrix.arch_name }}
+        run: docker run --rm dockcross/manylinux2010-x64 > ./dockcross-manylinux2010-x64; chmod +x ./dockcross-manylinux2010-x64
       - name: configure
-        run: ./dockcross-${{ matrix.arch_name }} cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/${{ matrix.arch_name }}/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/${{ matrix.arch_name }} -H.
+        run: ./dockcross-manylinux2010-x64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/manylinux2010-x64/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/manylinux2010-x64 -H.
       - name: build
-        run: ./dockcross-${{ matrix.arch_name }} cmake --build build/${{ matrix.arch_name }} -j 2 --target install
+        run: ./dockcross-manylinux2010-x64 cmake --build build/manylinux2010-x64 -j 2 --target install
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/${{ matrix.arch_name }}/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_${{ matrix.arch_name }}'
+          file: 'build/manylinux2010-x64/install/bin/mavsdk_server'
+          asset_name: 'mavsdk_server_manylinux2010-x64'
+          tag: ${{ github.ref }}
+          overwrite: true
+
+  dockcross-manylinux2014-aarch64:
+    name: manylinux2014-aarch64
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          submodules: recursive
+      - name: setup dockcross
+        run: docker run --rm dockcross/manylinux2014-aarch64 > ./dockcross-manylinux2014-aarch64; chmod +x ./dockcross-manylinux2014-aarch64
+      - name: configure
+        run: ./dockcross-manylinux2014-aarch64 /bin/bash -c 'CROSS_COMPILE="" PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/manylinux2014-aarch64/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/manylinux2014-aarch64 -H.'
+      - name: build
+        run: ./dockcross-manylinux2014-aarch64 cmake --build build/manylinux2014-aarch64 -j 2 --target install
+      - name: Publish artefacts
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: svenstaro/upload-release-action@v1-release
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: 'build/manylinux2014-aarch64/install/bin/mavsdk_server'
+          asset_name: 'mavsdk_server_manylinux2014-aarch64'
           tag: ${{ github.ref }}
           overwrite: true
 
