--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -261,7 +261,7 @@ jobs:
           overwrite: true
 
   dockcross-manylinux2010-x64:
-    name: ${{ matrix.arch_name }}
+    name: manylinux2010-x64
     runs-on: ubuntu-18.04
     strategy:
       matrix:
@@ -338,7 +338,7 @@ jobs:
       - name: setup dockcross
         run: docker run --rm dockcross/manylinux2014-aarch64 > ./dockcross-manylinux2014-aarch64; chmod +x ./dockcross-manylinux2014-aarch64
       - name: configure
-        run: ./dockcross-manylinux2014-aarch64 /bin/bash -c 'CROSS_COMPILE="" PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/manylinux2014-aarch64/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/manylinux2014-aarch64 -H.'
+        run: ./dockcross-manylinux2014-aarch64 /bin/bash -c 'OPENSSL_PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/manylinux2014-aarch64/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/manylinux2014-aarch64 -H.'
       - name: build
         run: ./dockcross-manylinux2014-aarch64 cmake --build build/manylinux2014-aarch64 -j 2 --target install
       - name: Publish artefacts
@@ -361,7 +361,7 @@ jobs:
       - name: setup dockcross
         run: docker run --rm dockcross/linux-arm64 > ./dockcross-linux-arm64; chmod +x ./dockcross-linux-arm64
       - name: configure
-        run: ./dockcross-linux-arm64 /bin/bash -c 'CROSS_COMPILE="" PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-arm64/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/linux-arm64 -H.'
+        run: ./dockcross-linux-arm64 /bin/bash -c 'OPENSSL_PLATFORM=linux-aarch64 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-arm64/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/linux-arm64 -H.'
       - name: build
         run: ./dockcross-linux-arm64 cmake --build build/linux-arm64 -j 2 --target install
       - name: Publish artefacts
@@ -387,7 +387,7 @@ jobs:
       - name: setup dockcross
         run: docker run --rm dockcross/${{ matrix.arch_name }} > ./dockcross-${{ matrix.arch_name }}; chmod +x ./dockcross-${{ matrix.arch_name }}
       - name: configure
-        run: ./dockcross-${{ matrix.arch_name }} /bin/bash -c 'CROSS_COMPILE="" PLATFORM=linux-armv4 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/${{ matrix.arch_name }}/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/${{ matrix.arch_name }} -H.'
+        run: ./dockcross-${{ matrix.arch_name }} /bin/bash -c 'OPENSSL_PLATFORM=linux-armv4 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/${{ matrix.arch_name }}/install -DBUILD_BACKEND=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/${{ matrix.arch_name }} -H.'
       - name: build
         run: ./dockcross-${{ matrix.arch_name }} cmake --build build/${{ matrix.arch_name }} -j 2 --target install
       - name: Publish artefacts
@@ -418,7 +418,7 @@ jobs:
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=/work/build/android-arm/third_party/install" >> $GITHUB_ENV
       - name: configure
-        run: ./dockcross-android-arm /bin/bash -c 'ANDROID_NDK=${CROSS_ROOT} PLATFORM=android-arm cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/android-arm/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/android-arm -H.'
+        run: ./dockcross-android-arm /bin/bash -c 'ANDROID_NDK=${CROSS_ROOT} OPENSSL_PLATFORM=android-arm cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/android-arm/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/android-arm -H.'
       - name: build
         run: ./dockcross-android-arm cmake --build build/android-arm -j 2 --target install
       - name: create tar with header and library
@@ -451,7 +451,7 @@ jobs:
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=/work/build/android-arm64/third_party/install" >> $GITHUB_ENV
       - name: configure
-        run: ./dockcross-android-arm64 /bin/bash -c 'ANDROID_NDK=${CROSS_ROOT} PLATFORM=android-arm64 cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/android-arm64/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/android-arm64 -H.'
+        run: ./dockcross-android-arm64 /bin/bash -c 'ANDROID_NDK=${CROSS_ROOT} OPENSSL_PLATFORM=android-arm64 cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/android-arm64/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/android-arm64 -H.'
       - name: build
         run: ./dockcross-android-arm64 cmake --build build/android-arm64 -j 2 --target install
       - name: create tar with header and library
@@ -496,6 +496,10 @@ jobs:
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/release/third_party/install" >> $GITHUB_ENV
+      - name: set SDKROOT value
+        run: |
+          export VAR_SDKROOT="$(xcrun --sdk macosx --show-sdk-path)"
+          echo "::set-env name=SDKROOT::$VAR_SDKROOT"
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/release/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/release -H.
       - name: build
@@ -644,7 +648,7 @@ jobs:
             echo "superbuild=-DSUPERBUILD=OFF" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
             echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/release/third_party/install" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: configure
-        run: cmake -G "Visual Studio 16 2019" $env:superbuild $env:cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/release/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/release -S.
+        run: cmake -G "Visual Studio 16 2019" $env:superbuild $env:cmake_prefix_path OPENSSL_PLATFORM=VC-WIN64A -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/release/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/release -S.
       - name: build
         run: cmake --build build/release -j 2 --config Release --target install
       - name: Publish artefacts
