Add openssl to ios

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -558,6 +558,12 @@ jobs:
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/ios/third_party/install" >> $GITHUB_ENV
+      - name: set CROSS_SDK value
+        run: |
+          export VAR_CROSS_TOP="$(dirname $(dirname $(xcrun --sdk iphoneos --show-sdk-path)))"
+          echo "::set-env name=CROSS_TOP::$VAR_CROSS_TOP"
+          export VAR_CROSS_SDK="$(basename $(xcrun --sdk iphoneos --show-sdk-path))"
+          echo "::set-env name=CROSS_SDK::$VAR_CROSS_SDK"
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$(pwd)/tools/ios.toolchain.cmake -DPLATFORM=OS -DDEPLOYMENT_TARGET=11.0 -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/ios -H.
       - name: build
