Set version/soversion on all libraries
Set up project version as shared library version (note that major version
needs to be reflected in package name as well). Set (only!) major version as
soversion, based on the assumption that library versions with same major version
will provide forward compatibility.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 3.1)
 
+set(MAVSDK_VERSION_MAJOR 0)
+set(MAVSDK_VERSION_MINOR 28)
+set(MAVSDK_VERSION_PATCH 0)
+set(MAVSDK_SOVERSION_STRING ${MAVSDK_VERSION_MAJOR})
+set(MAVSDK_VERSION_STRING ${MAVSDK_VERSION_MAJOR}.${MAVSDK_VERSION_MINOR}.${MAVSDK_VERSION_PATCH})
+
 # Extract command line args into ${CL_ARGS} in order to propagate them to the superbuild dependencies 
 get_cmake_property(vars CACHE_VARIABLES)
 foreach(var ${vars})
