--- a/src/plugins/ftp/CMakeLists.txt
+++ b/src/plugins/ftp/CMakeLists.txt
@@ -11,6 +11,8 @@ target_link_libraries(mavsdk_ftp
 
 set_target_properties(mavsdk_ftp
     PROPERTIES COMPILE_FLAGS ${warnings}
+    VERSION ${MAVSDK_VERSION_STRING}
+    SOVERSION ${MAVSDK_SOVERSION_STRING}
 )
 
 target_include_directories(mavsdk_ftp PUBLIC
