--- a/src/plugins/mavlink_passthrough/CMakeLists.txt
+++ b/src/plugins/mavlink_passthrough/CMakeLists.txt
@@ -9,6 +9,8 @@ target_link_libraries(mavsdk_mavlink_passthrough
 
 set_target_properties(mavsdk_mavlink_passthrough
     PROPERTIES COMPILE_FLAGS ${warnings}
+    VERSION ${MAVSDK_VERSION_STRING}
+    SOVERSION ${MAVSDK_SOVERSION_STRING}
 )
 
 target_include_directories(mavsdk_mavlink_passthrough PUBLIC
