--- a/src/plugins/mission_raw/CMakeLists.txt
+++ b/src/plugins/mission_raw/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories(
 
 set_target_properties(mavsdk_mission_raw
     PROPERTIES COMPILE_FLAGS ${warnings}
+    VERSION ${MAVSDK_VERSION_STRING}
+    SOVERSION ${MAVSDK_SOVERSION_STRING}
 )
 
 target_link_libraries(mavsdk_mission_raw
