--- a/src/plugins/shell/CMakeLists.txt
+++ b/src/plugins/shell/CMakeLists.txt
@@ -9,7 +9,9 @@ target_link_libraries(mavsdk_shell
 
 set_target_properties(mavsdk_shell
         PROPERTIES COMPILE_FLAGS ${warnings}
-        )
+        VERSION ${MAVSDK_VERSION_STRING}
+        SOVERSION ${MAVSDK_SOVERSION_STRING}
+)
 
 target_include_directories(mavsdk_shell PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
