--- a/src/plugins/log_files/CMakeLists.txt
+++ b/src/plugins/log_files/CMakeLists.txt
@@ -9,6 +9,8 @@ target_link_libraries(mavsdk_log_files
 
 set_target_properties(mavsdk_log_files
     PROPERTIES COMPILE_FLAGS ${warnings}
+    VERSION ${MAVSDK_VERSION_STRING}
+    SOVERSION ${MAVSDK_SOVERSION_STRING}
 )
 
 target_include_directories(mavsdk_log_files PUBLIC
