--- a/src/plugins/telemetry/CMakeLists.txt
+++ b/src/plugins/telemetry/CMakeLists.txt
@@ -10,6 +10,8 @@ target_link_libraries(mavsdk_telemetry
 
 set_target_properties(mavsdk_telemetry
     PROPERTIES COMPILE_FLAGS ${warnings}
+    VERSION ${MAVSDK_VERSION_STRING}
+    SOVERSION ${MAVSDK_SOVERSION_STRING}
 )
 
 target_include_directories(mavsdk_telemetry PUBLIC
