examples: added example for manual control
This uses a joystick using SDL2.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(fly_qgc_mission)
 add_subdirectory(follow_me)
 add_subdirectory(geofence_inclusion)
 add_subdirectory(mavshell)
+add_subdirectory(manual_control)
 add_subdirectory(multiple_drones)
 add_subdirectory(offboard_velocity)
 add_subdirectory(takeoff_land)
