examples: trying to link on Ubuntu

--- a/examples/manual_control/CMakeLists.txt
+++ b/examples/manual_control/CMakeLists.txt
@@ -20,5 +20,5 @@ target_link_libraries(manual_control
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk
-    SDL2::SDL2
+    SDL2
 )
