manual_control: try to also get SDL2 on Arch

--- a/examples/manual_control/CMakeLists.txt
+++ b/examples/manual_control/CMakeLists.txt
@@ -10,12 +10,15 @@ endif()
 
 find_package(MAVSDK REQUIRED)
 find_package(SDL2 REQUIRED)
-find_package(Threads)
+find_package(Threads REQUIRED)
 
 add_executable(manual_control
     manual_control.cpp
     joystick.cpp
 )
+if (NOT SDL2_LIBRARIES)
+    set(SDL2_LIBRARIES SDL2::SDL2)
+endif()
 
 target_link_libraries(manual_control
     MAVSDK::mavsdk_action
