mavsdk_server: link to mavsdk_manual_control

--- a/src/backend/src/CMakeLists.txt
+++ b/src/backend/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 
-set(COMPONENTS_LIST action calibration camera core follow_me ftp geofence gimbal info log_files mission mission_raw mocap offboard param shell telemetry tune)
+set(COMPONENTS_LIST action calibration camera core follow_me ftp geofence gimbal info log_files manual_control mission mission_raw mocap offboard param shell telemetry tune)
 
 foreach(COMPONENT_NAME ${COMPONENTS_LIST})
     add_library(${COMPONENT_NAME}_proto_gens STATIC
@@ -53,6 +53,7 @@ target_link_libraries(mavsdk_server
     mavsdk_gimbal
     mavsdk_info
     mavsdk_log_files
+    mavsdk_manual_control
     mavsdk_mission
     mavsdk_mission_raw
     mavsdk_mocap
