Always enable mavlink passthrough

--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -10,14 +10,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTESTING")
 # `make test` does not show output, but `make check` does
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
 
-if (ENABLE_MAVLINK_PASSTHROUGH)
-    set(additional_sources
-        mavlink_passthrough.cpp
-        mission_transfer_lossy.cpp)
-    set(additional_libs "mavsdk_mavlink_passthrough")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DENABLE_MAVLINK_PASSTHROUGH")
-endif()
-
 # This includes all GTests that run integration tests
 add_executable(integration_tests_runner
     ../core/unittests_main.cpp
@@ -61,7 +53,8 @@ add_executable(integration_tests_runner
     telemetry_health.cpp
     telemetry_modes.cpp
     telemetry_sync.cpp
-    ${additional_sources}
+    mavlink_passthrough.cpp
+    mission_transfer_lossy.cpp
 )
 
 include_directories(
@@ -89,7 +82,7 @@ target_link_libraries(integration_tests_runner
     mavsdk_geofence
     mavsdk_param
     mavsdk_ftp
-    ${additional_libs}
+    mavsdk_mavlink_passthrough
     gtest
     gtest_main
     gmock
